- general
    - finally figured out how to get setuptools version in, available
      as sqlalchemy.__version__ [ticket:428]
- ext
    - iteration over dict association proxies is now dict-like, not
      InstrumentedList-like (e.g. over keys instead of values)
    - association proxies no longer bind tightly to source collections
      [ticket:597], and are constructed with a thunk instead
- orm
    - remember all that stuff about polymorphic_union ?  for 
      joined table inheritance ?  Funny thing...
      You sort of don't need it for joined table inheritance, you 
      can just string all the tables together via outerjoin().
      The UNION still applies if concrete tables are involved, 
      though (since nothing to join them on).
    - small fix to eager loading to better work with eager loads
      to polymorphic mappers that are using a straight "outerjoin"
      clause
- sql
    - result.last_inserted_ids() should return a list that is identically
      sized to the primary key constraint of the table.  values that were 
      "passively" created and not available via cursor.lastrowid will be None.
    - long-identifier detection fixed to use > rather than >= for 
      max ident length [ticket:589]
    - fixed bug where selectable.corresponding_column(selectable.c.col)
      would not return selectable.c.col, if the selectable is a join
      of a table and another join involving the same table.  messed
      up ORM decision making [ticket:593]
    - added Interval type to types.py [ticket:595]
- mysql
    - added 'fields' to reserved words [ticket:590]
- oracle
    - datetime fixes: got subsecond TIMESTAMP to work [ticket:604],
      added OracleDate which supports types.Date with only year/month/day
- sqlite
    - sqlite better handles datetime/date/time objects mixed and matched
      with various Date/Time/DateTime columns
    - string PK column inserts dont get overwritten with OID [ticket:603] 

0.3.8
- engines